--- a/EmissaryCrisis/src/main/resources/application.properties
+++ b/EmissaryCrisis/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.thymeleaf.prefix = classpath:/templates/
+#context path
+server.servlet.context-path=/emissarycrisis
+#port
+server.port=8080
